# cargo-emanate

./: .gitignore  Cargo.toml  README.md
src/: archive.rs  build.rs  check.rs  config.rs  context.rs  crates.rs  error.rs  log.rs  main.rs  manifest.rs  owner.rs  prelude.rs  processor.rs  project.rs  publish.rs  repository.rs  run.rs  utils.rs  version.rs
test/: Emanate.toml  workflow.toml
