[package]
name = "cargo-emanate"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aspectron/cargo-emanate"
keywords = ["cargo", "subcommand", "installation", "package"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
exclude = ["/.*", "/test"]
description = """
Cargo subcommand for publishing workspace-based crates.
"""

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
duct = "0.13.5"
toml = "0.5.9"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.97", features = ["derive", "rc"] }
thiserror = "1.0"
async-std = "1.12.0"
console = "0.15.0"
crates_io_api = "0.8.1"
home = "0.5.3"
futures-util = "0.3.26"
toml_edit = "0.19.1"
pad = "0.1.6"
