[package]
name = "cargo-emanate"
version = "0.4.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aspectron/cargo-emanate"
keywords = ["cargo", "subcommand", "installation", "package"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
exclude = ["/.*", "/test"]
description = """
Cargo subcommand for publishing workspace-based crates.
"""

[dependencies]
async-std = "1.12.0"
cfg-if = "1.0.0"
clap = { version = "4.2.2", features = ["derive"] }
console = "0.15.5"
convert_case = "0.6.0"
crates_io_api = "0.8.1"
duct = "0.13.6"
flate2 = "1.0.25"
fs_extra = "1.3.0"
futures-util = "0.3.28"
home = "0.5.4"
pad = "0.1.6"
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
tar = "0.4.38"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
toml_edit = "0.19.8"
walkdir = "2.3.3"
zip = "0.6.4"